Updated procotolError signature and the package name to be lowercase

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "autolinker": "^1.7.1",
     "electron-prompt": "^1.1.0-1",
-    "jsIRC": "git+https://github.com/clausjoergensen/jsIRC.git",
+    "jsirc": "git+https://github.com/clausjoergensen/jsIRC.git",
     "max-listeners-exceeded-warning": "0.0.1",
     "strftime": "^0.10.0"
   }
