Added option to preformat text, such as the MOTD

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "autolinker": "^1.7.1",
+    "htmlencode": "0.0.4",
     "jquery": "^3.3.1",
     "jsirc": "git+https://github.com/clausjoergensen/jsIRC.git",
     "pretty-ms": "^3.2.0",
