--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "max-listeners-exceeded-warning": "0.0.1"
   },
   "dependencies": {
+    "ajv": "^6.0.0",
     "autolinker": "^1.7.1",
     "electron-store": "^2.0.0",
     "htmlencode": "0.0.4",
