Use jsirc from npm instead of directly from git

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "author": {
     "name": "Claus Jørgensen",
-    "email": "claus.joergensen@outlook.com"
+    "email": "claus.joergensen+npm@outlook.com"
   },
   "build": {
     "win": {
@@ -36,7 +36,7 @@
     "electron-store": "^2.0.0",
     "htmlencode": "0.0.4",
     "jquery": "^3.3.1",
-    "jsirc": "git+https://github.com/clausjoergensen/jsIRC.git",
+    "jsirc": "^0.0.1",
     "pretty-ms": "^3.2.0",
     "strftime": "^0.10.0"
   }
